// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oxlint CLI > should apply fixes when \`--fix\` is enabled 1`] = `
"Found 0 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should apply fixes when \`--fix\` is enabled 2`] = `
"

let daddy = 1;
let abacus = 2;
let magic = 3;
let damned = 4;
let elephant = 5;
let feck = 6;
let numpty = 7;
let dangermouse = 8;
let granular = 9;
let cowabunga = 10;


"
`;

exports[`oxlint CLI > should have UTF-16 spans in AST 1`] = `
"
  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | // £
   \`----
  help: Remove the debugger statement

  x utf16-plugin(no-debugger): Debugger at 0-9
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | // £
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:3:1]
 2 | // £
 3 | debugger;
   : ^^^^^^^^^
 4 | // 🤨
   \`----
  help: Remove the debugger statement

  x utf16-plugin(no-debugger): Debugger at 15-24
   ,-[files/index.js:3:1]
 2 | // £
 3 | debugger;
   : ^^^^^^^^^
 4 | // 🤨
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:6:3]
 5 | {
 6 |   debugger;
   :   ^^^^^^^^^
 7 | }
   \`----
  help: Remove the debugger statement

  x utf16-plugin(no-debugger): Debugger at 35-44
   ,-[files/index.js:6:3]
 5 | {
 6 |   debugger;
   :   ^^^^^^^^^
 7 | }
   \`----

Found 3 warnings and 3 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should lint a directory with errors with JS plugins enabled 1`] = `
"
  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should lint a directory with errors without JS plugins enabled 1`] = `
"
  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should lint a directory without errors with JS plugins enabled 1`] = `
"Found 0 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should lint a directory without errors without JS plugins enabled 1`] = `
"Found 0 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should load a custom plugin 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 1 warning and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should load a custom plugin when configured in overrides 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 1 warning and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should load a custom plugin with multiple files 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/01.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/01.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/02.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/02.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/03.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/03.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/04.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/04.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/05.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/05.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/06.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/06.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/07.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/07.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/08.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/08.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/09.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/09.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/10.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/10.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/11.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/11.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/12.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/12.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/13.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/13.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/14.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/14.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/15.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/15.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/16.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/16.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/17.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/17.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/18.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/18.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/19.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/19.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/20.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/20.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 20 warnings and 20 errors.
Finished in Xms on 20 files using X threads."
`;

exports[`oxlint CLI > should load a custom plugin with various import styles 1`] = `
"
  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x plugin1(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  x plugin2(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  x plugin3(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  x plugin4(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  x plugin5(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  x plugin6(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

Found 1 warning and 6 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should not apply fixes when \`--fix\` is disabled 1`] = `
"
  x fixes-plugin(fixes): Remove debugger statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   \`----

  x fixes-plugin(fixes): Replace "a" with "daddy"
   ,-[files/index.js:3:5]
 2 | 
 3 | let a = 1;
   :     ^
 4 | let b = 2;
   \`----

  x fixes-plugin(fixes): Replace "b" with "abacus"
   ,-[files/index.js:4:5]
 3 | let a = 1;
 4 | let b = 2;
   :     ^
 5 | let c = 3;
   \`----

  x fixes-plugin(fixes): Prefix "c" with "magi"
   ,-[files/index.js:5:5]
 4 | let b = 2;
 5 | let c = 3;
   :     ^
 6 | let d = 4;
   \`----

  x fixes-plugin(fixes): Prefix "d" with "damne"
   ,-[files/index.js:6:5]
 5 | let c = 3;
 6 | let d = 4;
   :     ^
 7 | let e = 5;
   \`----

  x fixes-plugin(fixes): Postfix "e" with "lephant"
   ,-[files/index.js:7:5]
 6 | let d = 4;
 7 | let e = 5;
   :     ^
 8 | let f = 6;
   \`----

  x fixes-plugin(fixes): Postfix "f" with "eck"
   ,-[files/index.js:8:5]
 7 | let e = 5;
 8 | let f = 6;
   :     ^
 9 | let g = 7;
   \`----

  x fixes-plugin(fixes): Replace "g" with "numpty"
    ,-[files/index.js:9:5]
  8 | let f = 6;
  9 | let g = 7;
    :     ^
 10 | let h = 8;
    \`----

  x fixes-plugin(fixes): Replace "h" with "dangermouse"
    ,-[files/index.js:10:5]
  9 | let g = 7;
 10 | let h = 8;
    :     ^
 11 | let i = 9;
    \`----

  x fixes-plugin(fixes): Replace "i" with "granular"
    ,-[files/index.js:11:5]
 10 | let h = 8;
 11 | let i = 9;
    :     ^
 12 | let j = 10;
    \`----

  x fixes-plugin(fixes): Replace "j" with "cowabunga"
    ,-[files/index.js:12:5]
 11 | let i = 9;
 12 | let j = 10;
    :     ^
 13 | 
    \`----

  x fixes-plugin(fixes): Remove debugger statement
    ,-[files/index.js:14:1]
 13 | 
 14 | debugger;
    : ^^^^^^^^^
    \`----

Found 0 warnings and 12 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should receive ESTree-compatible AST 1`] = `
"
  x estree-check(check): Visited nodes:
  | * Program
  | * VariableDeclaration: let
  | * VariableDeclarator: (init: ObjectExpression)
  | * Identifier: a
  | * ObjectExpression
  | * Identifier: x
  | * Identifier: y
  | * VariableDeclaration:exit: let
  | * VariableDeclaration: const
  | * VariableDeclarator: (init: BinaryExpression)
  | * Identifier: b
  | * BinaryExpression: * (right: BinaryExpression)
  | * Identifier: x
  | * BinaryExpression: + (right: Literal)
  | * Literal: str
  | * Literal: 123
  | * VariableDeclaration:exit: const
  | * TSTypeAliasDeclaration: (typeAnnotation: TSStringKeyword)
  | * Identifier: T
  | * TSStringKeyword
  | * TSTypeAliasDeclaration:exit: (typeAnnotation: TSStringKeyword)
  | * TSTypeAliasDeclaration: (typeAnnotation: TSUnionType)
  | * Identifier: U
  | * TSUnionType: (types: TSStringKeyword, TSNumberKeyword)
  | * TSStringKeyword
  | * TSNumberKeyword
  | * TSUnionType:exit: (types: TSStringKeyword, TSNumberKeyword)
  | * TSTypeAliasDeclaration:exit: (typeAnnotation: TSUnionType)
  | * Program:exit
    ,-[files/index.ts:2:1]
  1 |     // All \`Identifier\`s
  2 | ,-> let a = { x: y };
  3 | |   
  4 | |   // No \`ParenthesizedExpression\`s in AST
  5 | |   const b = (x * ((('str' + ((123))))));
  6 | |   
  7 | |   // TS syntax
  8 | |   type T = string;
  9 | |   
 10 | |   // No \`TSParenthesizedType\`s in AST
 11 | \`-> type U = (((((string)) | ((number)))));
    \`----

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should receive data via \`context\` 1`] = `
"
  x context-plugin(log-context): id: context-plugin/log-context
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x context-plugin(log-context): filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x context-plugin(log-context): physicalFilename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x context-plugin(log-context): id: context-plugin/log-context
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x context-plugin(log-context): filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x context-plugin(log-context): physicalFilename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

Found 0 warnings and 6 errors.
Finished in Xms on 2 files using X threads."
`;

exports[`oxlint CLI > should report an error if a a rule is not found within a custom plugin (via overrides) 1`] = `
"Failed to build configuration.

  x Rule 'missing' not found in plugin 'basic-custom-plugin'
"
`;

exports[`oxlint CLI > should report an error if a custom plugin in config but JS plugins are not enabled 1`] = `
"Failed to parse configuration file.

  x \`plugins\` config contains './plugin.js'. JS plugins are not supported without \`--js-plugins\` CLI option. Note: JS plugin support is experimental.
"
`;

exports[`oxlint CLI > should report an error if a custom plugin is missing 1`] = `
"Failed to parse configuration file.

  x Failed to load JS plugin: ./plugin.js
  |   Cannot find module './plugin.js'
"
`;

exports[`oxlint CLI > should report an error if a custom plugin throws an error during import 1`] = `
"Failed to parse configuration file.

  x Failed to load JS plugin: ./plugin.js
  |   Error: whoops!
  |     at <root>/apps/oxlint/test/fixtures/custom_plugin_import_error/plugin.js:1:7
"
`;

exports[`oxlint CLI > should report an error if a custom plugin throws an error during linting > in \`after\` hook 1`] = `
"
  x Error running JS plugin.
  | File path: <root>/apps/oxlint/test/fixtures/custom_plugin_lint_after_hook_error/files/index.js
  | Error: Whoops!
  |     at after (<root>/apps/oxlint/test/fixtures/custom_plugin_lint_after_hook_error/plugin.js:10:19)

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should report an error if a custom plugin throws an error during linting > in \`before\` hook 1`] = `
"
  x Error running JS plugin.
  | File path: <root>/apps/oxlint/test/fixtures/custom_plugin_lint_before_hook_error/files/index.js
  | Error: Whoops!
  |     at before (<root>/apps/oxlint/test/fixtures/custom_plugin_lint_before_hook_error/plugin.js:10:19)

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should report an error if a custom plugin throws an error during linting > in \`create\` method 1`] = `
"
  x Error running JS plugin.
  | File path: <root>/apps/oxlint/test/fixtures/custom_plugin_lint_create_error/files/index.js
  | Error: Whoops!
  |     at Object.create (<root>/apps/oxlint/test/fixtures/custom_plugin_lint_create_error/plugin.js:8:15)

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should report an error if a custom plugin throws an error during linting > in \`createOnce\` method 1`] = `
"Failed to parse configuration file.

  x Failed to load JS plugin: ./plugin.js
  |   Error: Whoops!
  |     at Object.createOnce (<root>/apps/oxlint/test/fixtures/custom_plugin_lint_createOnce_error/plugin.js:8:15)
"
`;

exports[`oxlint CLI > should report an error if a custom plugin throws an error during linting > in \`fix\` function 1`] = `
"
  x Error running JS plugin.
  | File path: <root>/apps/oxlint/test/fixtures/custom_plugin_lint_fix_error/files/index.js
  | Error: Whoops!
  |     at Object.fix (<root>/apps/oxlint/test/fixtures/custom_plugin_lint_fix_error/plugin.js:14:23)
  |     at Identifier (<root>/apps/oxlint/test/fixtures/custom_plugin_lint_fix_error/plugin.js:10:21)

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should report an error if a custom plugin throws an error during linting > in visit function 1`] = `
"
  x Error running JS plugin.
  | File path: <root>/apps/oxlint/test/fixtures/custom_plugin_lint_visit_error/files/index.js
  | Error: Whoops!
  |     at Identifier (<root>/apps/oxlint/test/fixtures/custom_plugin_lint_visit_error/plugin.js:10:19)

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should report an error if a rule is not found within a custom plugin 1`] = `
"Failed to parse configuration file.

  x Rule 'unknown-rule' not found in plugin 'basic-custom-plugin'
"
`;

exports[`oxlint CLI > should report the correct severity when using a custom plugin 1`] = `
"
  ! basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 2 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should respect disable directives for custom plugin rules 1`] = `
"
  x test-plugin(no-var): Use let or const instead of var
   ,-[files/index.js:1:1]
 1 | var shouldError = 1;
   : ^^^^^^^^^^^^^^^^^^^^
 2 | 
   \`----

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
    ,-[files/index.js:10:1]
  9 | // should trigger an error
 10 | debugger;
    : ^^^^^^^^^
 11 | 
    \`----
  help: Remove the debugger statement

  x test-plugin(no-var): Use let or const instead of var
    ,-[files/index.js:16:1]
 15 | /* oxlint-disable-next-line test-plugin */ // \`test-plugin\` should be \`test-plugin/no-var\`
 16 | var incorrectlyDisabled = 4;
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 17 | 
    \`----

  x test-plugin(no-var): Use let or const instead of var
    ,-[files/index.js:19:1]
 18 | /* oxlint-disable-next-line no-var */ // \`no-var\` should be \`test-plugin/no-var\`
 19 | var anotherIncorrectlyDisabled = 4;
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 20 | 
    \`----

  x test-plugin(no-var): Use let or const instead of var
    ,-[files/index.js:22:1]
 21 | // This var should trigger an error again
 22 | var shouldErrorAgain = 3;
    : ^^^^^^^^^^^^^^^^^^^^^^^^^
    \`----

Found 0 warnings and 5 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint CLI > should support \`createOnce\` 1`] = `
"
  x create-once-plugin(after-only): after hook: filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(after-only): after hook: id: create-once-plugin/after-only
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: call count: 1
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: filename: Cannot access \`context.filename\` in \`createOnce\`
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): before hook: filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): after hook: filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: id: Cannot access \`context.id\` in \`createOnce\`
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): before hook: id: create-once-plugin/always-run
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): after hook: id: create-once-plugin/always-run
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: options: Cannot access \`context.options\` in \`createOnce\`
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: physicalFilename: Cannot access \`context.physicalFilename\` in \`createOnce\`
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: report: Cannot report errors in \`createOnce\`
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: this === rule: true
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(before-only): before hook: filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(before-only): before hook: id: create-once-plugin/before-only
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(skip-run): before hook: filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(skip-run): before hook: id: create-once-plugin/skip-run
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x create-once-plugin(after-only): ident visit fn "x": filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let x;
   :     ^
   \`----

  x create-once-plugin(always-run): ident visit fn "x": filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let x;
   :     ^
   \`----

  x create-once-plugin(before-only): ident visit fn "x": filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let x;
   :     ^
   \`----

  x create-once-plugin(no-hooks): ident visit fn "x": filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let x;
   :     ^
   \`----

  x create-once-plugin(after-only): after hook: filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(after-only): after hook: id: create-once-plugin/after-only
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: call count: 1
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: filename: Cannot access \`context.filename\` in \`createOnce\`
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): before hook: filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): after hook: filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: id: Cannot access \`context.id\` in \`createOnce\`
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): before hook: id: create-once-plugin/always-run
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): after hook: id: create-once-plugin/always-run
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: options: Cannot access \`context.options\` in \`createOnce\`
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: physicalFilename: Cannot access \`context.physicalFilename\` in \`createOnce\`
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: report: Cannot report errors in \`createOnce\`
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(always-run): createOnce: this === rule: true
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(before-only): before hook: filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(before-only): before hook: id: create-once-plugin/before-only
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(skip-run): before hook: filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(skip-run): before hook: id: create-once-plugin/skip-run
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x create-once-plugin(after-only): ident visit fn "y": filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let y;
   :     ^
   \`----

  x create-once-plugin(always-run): ident visit fn "y": filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let y;
   :     ^
   \`----

  x create-once-plugin(before-only): ident visit fn "y": filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let y;
   :     ^
   \`----

  x create-once-plugin(no-hooks): ident visit fn "y": filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let y;
   :     ^
   \`----

Found 0 warnings and 42 errors.
Finished in Xms on 2 files using X threads."
`;

exports[`oxlint CLI > should support \`definePlugin\` 1`] = `
"
  x define-plugin-plugin(create): create body:
  | this === rule: true
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-plugin(create-once): before hook:
  | createOnce call count: 1
  | this === rule: true
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-plugin(create-once): after hook:
  | identNum: 2
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-plugin(create-once-after-only): after hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-plugin(create-once-before-false): before hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-plugin(create-once-before-only): before hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-plugin(create): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-plugin(create-once): ident visit fn "a":
  | identNum: 1
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-plugin(create-once-after-only): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-plugin(create-once-before-only): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-plugin(create-once-no-hooks): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-plugin(create): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-plugin(create-once): ident visit fn "b":
  | identNum: 2
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-plugin(create-once-after-only): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-plugin(create-once-before-only): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-plugin(create-once-no-hooks): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-plugin(create): create body:
  | this === rule: true
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-plugin(create-once): before hook:
  | createOnce call count: 1
  | this === rule: true
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-plugin(create-once): after hook:
  | identNum: 2
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-plugin(create-once-after-only): after hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-plugin(create-once-before-false): before hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-plugin(create-once-before-false): after hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-plugin(create-once-before-only): before hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-plugin(create): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-plugin(create-once): ident visit fn "c":
  | identNum: 1
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-plugin(create-once-after-only): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-plugin(create-once-before-false): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-plugin(create-once-before-only): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-plugin(create-once-no-hooks): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-plugin(create): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-plugin(create-once): ident visit fn "d":
  | identNum: 2
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-plugin(create-once-after-only): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-plugin(create-once-before-false): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-plugin(create-once-before-only): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-plugin(create-once-no-hooks): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

Found 0 warnings and 35 errors.
Finished in Xms on 2 files using X threads."
`;

exports[`oxlint CLI > should support \`definePlugin\` and \`defineRule\` together 1`] = `
"
  x define-plugin-and-rule-plugin(create): create body:
  | this === rule: true
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once): before hook:
  | createOnce call count: 1
  | this === rule: true
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once): after hook:
  | identNum: 2
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once-after-only): after hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-false): before hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-only): before hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once): ident visit fn "a":
  | identNum: 1
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once-after-only): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-only): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once-no-hooks): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once): ident visit fn "b":
  | identNum: 2
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once-after-only): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-only): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once-no-hooks): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create): create body:
  | this === rule: true
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once): before hook:
  | createOnce call count: 1
  | this === rule: true
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once): after hook:
  | identNum: 2
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once-after-only): after hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-false): before hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-false): after hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-only): before hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-plugin-and-rule-plugin(create): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once): ident visit fn "c":
  | identNum: 1
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once-after-only): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-false): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-only): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create-once-no-hooks): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-plugin-and-rule-plugin(create): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once): ident visit fn "d":
  | identNum: 2
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once-after-only): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-false): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once-before-only): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-plugin-and-rule-plugin(create-once-no-hooks): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

Found 0 warnings and 35 errors.
Finished in Xms on 2 files using X threads."
`;

exports[`oxlint CLI > should support \`defineRule\` 1`] = `
"
  x define-rule-plugin(create): create body:
  | this === rule: true
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-rule-plugin(create-once): before hook:
  | createOnce call count: 1
  | this === rule: true
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-rule-plugin(create-once): after hook:
  | identNum: 2
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-rule-plugin(create-once-after-only): after hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-rule-plugin(create-once-before-false): before hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-rule-plugin(create-once-before-only): before hook:
  | filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let a, b;
   : ^
   \`----

  x define-rule-plugin(create): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-rule-plugin(create-once): ident visit fn "a":
  | identNum: 1
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-rule-plugin(create-once-after-only): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-rule-plugin(create-once-before-only): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-rule-plugin(create-once-no-hooks): ident visit fn "a":
  | filename: files/1.js
   ,-[files/1.js:1:5]
 1 | let a, b;
   :     ^
   \`----

  x define-rule-plugin(create): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-rule-plugin(create-once): ident visit fn "b":
  | identNum: 2
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-rule-plugin(create-once-after-only): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-rule-plugin(create-once-before-only): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-rule-plugin(create-once-no-hooks): ident visit fn "b":
  | filename: files/1.js
   ,-[files/1.js:1:8]
 1 | let a, b;
   :        ^
   \`----

  x define-rule-plugin(create): create body:
  | this === rule: true
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-rule-plugin(create-once): before hook:
  | createOnce call count: 1
  | this === rule: true
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-rule-plugin(create-once): after hook:
  | identNum: 2
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-rule-plugin(create-once-after-only): after hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-rule-plugin(create-once-before-false): before hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-rule-plugin(create-once-before-false): after hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-rule-plugin(create-once-before-only): before hook:
  | filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let c, d;
   : ^
   \`----

  x define-rule-plugin(create): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-rule-plugin(create-once): ident visit fn "c":
  | identNum: 1
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-rule-plugin(create-once-after-only): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-rule-plugin(create-once-before-false): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-rule-plugin(create-once-before-only): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-rule-plugin(create-once-no-hooks): ident visit fn "c":
  | filename: files/2.js
   ,-[files/2.js:1:5]
 1 | let c, d;
   :     ^
   \`----

  x define-rule-plugin(create): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-rule-plugin(create-once): ident visit fn "d":
  | identNum: 2
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-rule-plugin(create-once-after-only): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-rule-plugin(create-once-before-false): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-rule-plugin(create-once-before-only): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

  x define-rule-plugin(create-once-no-hooks): ident visit fn "d":
  | filename: files/2.js
   ,-[files/2.js:1:8]
 1 | let c, d;
   :        ^
   \`----

Found 0 warnings and 35 errors.
Finished in Xms on 2 files using X threads."
`;

exports[`oxlint CLI > should work with multiple rules 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   \`----

  x basic-custom-plugin(no-debugger-2): Unexpected Debugger Statement
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-identifiers-named-foo): Unexpected Identifier named foo
   ,-[files/index.js:3:1]
 2 | 
 3 | foo;
   : ^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-unused-expressions.html\\eslint(no-unused-expressions)]8;;\\: Expected expression to be used
   ,-[files/index.js:3:1]
 2 | 
 3 | foo;
   : ^^^^
   \`----
  help: Consider using this expression or removing it

Found 2 warnings and 3 errors.
Finished in Xms on 1 file using X threads."
`;
